WIP MPI/distributed context
In progress:
* No requirement for ARB_HAVE_MPI defined in user code for headers to work.
* Use system_error interface to wrap MPI error codes/conditions.
* Move mpi::scoped_guard functionality out of lib.
* Distributed tests build against both mpi and local contexts.
* Remove test/test_util.hpp (nearly).

--- a/arbor/CMakeLists.txt
+++ b/arbor/CMakeLists.txt
@@ -57,7 +57,8 @@ endif()
 
 if(ARB_WITH_MPI)
     list(APPEND arbor_sources
-        communication/mpi.cpp)
+        communication/mpi.cpp
+        communication/mpi_context.cpp)
 endif()
 
 if(ARB_WITH_CTHREAD)
