--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = ext/google-benchmark
 	url = https://github.com/google/benchmark
 [submodule "doc/rtd_theme"]
-	path = doc/rtd_theme
+	path = doc/sphinx_rtd_theme
 	url = https://github.com/rtfd/sphinx_rtd_theme.git
 [submodule "tbb"]
 	path = ext/tbb
