--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -26,4 +26,4 @@ add_custom_target(html
 # Remove generated documentation when make clean is run.
 set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES "${doctree_dir}" "${html_dir}")
 
-install(DIRECTORY ${html_dir} DESTINATION ${CMAKE_INSTALL_DOCDIR})
+install(DIRECTORY ${html_dir} DESTINATION ${CMAKE_INSTALL_DOCDIR} OPTIONAL)
