--- a/example/miniapp/CMakeLists.txt
+++ b/example/miniapp/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(MINIAPP_SOURCES
+add_executable(miniapp
     miniapp.cpp
     io.cpp
     miniapp_recipes.cpp
@@ -6,19 +6,7 @@ set(MINIAPP_SOURCES
     trace.cpp
 )
 
-add_executable(miniapp.exe ${MINIAPP_SOURCES})
+target_link_libraries(miniapp PRIVATE arbor arbor-aux ext-tclap ext-json)
 
-target_link_libraries(miniapp.exe LINK_PUBLIC ${ARB_LIBRARIES})
-target_link_libraries(miniapp.exe LINK_PUBLIC ${EXTERNAL_LIBRARIES})
-
-if(ARB_WITH_MPI)
-    target_link_libraries(miniapp.exe LINK_PUBLIC ${MPI_C_LIBRARIES})
-    set_property(TARGET miniapp.exe APPEND_STRING PROPERTY LINK_FLAGS "${MPI_C_LINK_FLAGS}")
-endif()
-
-set_target_properties(
-    miniapp.exe
-    PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/example"
-)
-
+# TODO: resolve public headers
+target_link_libraries(miniapp PRIVATE arbor-private-headers)
