--- a/mechanisms/CMakeLists.txt
+++ b/mechanisms/CMakeLists.txt
@@ -10,15 +10,19 @@ set(mod_srcdir "${CMAKE_CURRENT_SOURCE_DIR}/mod")
 set(mech_dir "${CMAKE_CURRENT_BINARY_DIR}/generated")
 file(MAKE_DIRECTORY "${mech_dir}")
 
+set(modcc_flags)
 if(ARB_VECTORIZE)
-    set(modcc_simd "-s")
+    list(APPEND modcc_flags "-s")
+endif()
+if(ARB_WITH_PROFILING)
+    list(APPEND modcc_flags "--profile")
 endif()
 
 build_modules(
     ${mechanisms}
     SOURCE_DIR "${mod_srcdir}"
     DEST_DIR "${mech_dir}"
-    MODCC_FLAGS -t cpu -t gpu ${modcc_simd}
+    MODCC_FLAGS -t cpu -t gpu ${modcc_flags}
     GENERATES .hpp _cpu.cpp _gpu.cpp _gpu.cu
     TARGET build_all_mods
 )
