--- a/arbor/CMakeLists.txt
+++ b/arbor/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Sources:
 
 set(arbor_sources
+    arbexcept.cpp
     assert.cpp
     backends/multicore/mechanism.cpp
     backends/multicore/shared_state.cpp
@@ -35,6 +36,7 @@ set(arbor_sources
     profile/power_meter.cpp
     profile/profiler.cpp
     schedule.cpp
+    spike_event_io.cpp
     spike_source_cell_group.cpp
     swcio.cpp
     threadinfo.cpp
