--- a/modcc/CMakeLists.txt
+++ b/modcc/CMakeLists.txt
@@ -35,5 +35,7 @@ target_link_libraries(modcc libmodcc ext-tclap)
 
 set_target_properties(modcc libmodcc PROPERTIES EXCLUDE_FROM_ALL ${ARB_WITH_EXTERNAL_MODCC})
 
-install(TARGETS modcc RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+if (NOT ARB_WITH_EXTERNAL_MODCC)
+    install(TARGETS modcc RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+endif()
 
