Address PR review comments.
* Rename `domain_info` to `proc_allocation`.
* Rename `local_domain_info()` to `local_allocation()`.
* Rename `domain_info.cpp` source to `local_alloc.cpp`.
* Capture-by-move for `foreach_group` helper in `simulation.cpp`.
* Change non-zero test to greater-than-zero test for gpu count in
`partition_load_balance`
* Use consistent unsigned cast in `node_info.cpp`.

--- a/arbor/CMakeLists.txt
+++ b/arbor/CMakeLists.txt
@@ -10,7 +10,7 @@ set(arbor_sources
     builtin_mechanisms.cpp
     cell_group_factory.cpp
     common_types_io.cpp
-    domain_info.cpp
+    local_alloc.cpp
     event_binner.cpp
     fvm_layout.cpp
     fvm_lowered_cell_impl.cpp
