--- a/arbor/CMakeLists.txt
+++ b/arbor/CMakeLists.txt
@@ -57,6 +57,8 @@ if(ARB_WITH_CUDA)
         backends/gpu/managed_ptr.cpp
         backends/gpu/matrix_assemble.cu
         backends/gpu/matrix_interleave.cu
+        backends/gpu/matrix_fine.cu
+        backends/gpu/matrix_fine.cpp
         backends/gpu/matrix_solve.cu
         backends/gpu/multi_event_stream.cu
         backends/gpu/shared_state.cu
